# cbs

./: .gitignore  CLAUDE.md  GEMINI.md  do-cbsd-rs-compose.sh  podman-compose.cbsd-rs.yaml  pyproject.toml
.gemini/feature/: cbscore-rs.md
.github/workflows/: release-cbc-binary.yaml
_docs/plans/: feature-cbscore-rs.md  plan-cbscore-rs.md  requirements-cbscore-rs.md  spec-cbscore.md  subcmd-build.md  subcmd-config-init-vault.md  subcmd-config-init.md  subcmd-runner-build.md  subcmd-versions-create.md  subcmd-versions-list.md
cbscommon/: README.md  pyproject.toml
cbscommon/src/cbscommon/: __init__.py  _process.py  _types.py  exceptions.py
cbscommon/src/cbscommon/git/: __init__.py  _cmds.py  _exceptions.py  _types.py  cmds.py  commands.py  exceptions.py  types.py
cbscommon/src/cbscommon/process/: __init__.py  cmds.py
cbsd-rs/: .gitignore  CLAUDE.md  Cargo.toml
cbsd-rs/.sqlx/: query-045b71811b9d79e7c6bedacdd953564d613f6037d2c670fa33f0300865ede588.json  query-0feb1514e60e626d04a1344f37232f30bb17abc7e21649f24167938555878d09.json  query-3b46a81f1af89c83548ea700e55b2e2280df4b0d7a61348083f6d7efbc15f15f.json  query-49ca4f114f9078739f3a94d51b3d36414b55517270b5bb872da1d9d5403ac58a.json  query-4fef219f788563abdd8c08f3a1ba660bc2e69c92dc42b452798286d15adaa4ac.json  query-6896d563d2ee0739778979b11c63a294d58c9fc5c8beb4a876cb021c6c83e894.json  query-9557736345a5394557483aae9324fbcaa95dd5091aefecb2d1e3e33ce84aa108.json  query-9d615fedfd441bd7a073f8307d5a55daaadfaf4b17988f0de2fff2164e12580d.json  query-aaccefe48755077cb8395d9b74b0fbcf39dd4b658e1eaeb64d82f09a8d99c81a.json  query-b0aad2fe68b98dfc3da9db392f6d81534fa68a6b7787414a53515481a09019f3.json  query-cd8b263d1c26b3d7b13263b6438cd6498729b468b807992fffd14f4e40735559.json
cbsd-rs/cbc/: Cargo.toml
cbsd-rs/cbsbuild/: Cargo.toml
cbsd-rs/cbsbuild/src/: cli.rs  cmds.rs  logging.rs  main.rs
cbsd-rs/cbsbuild/src/cmds/: advanced.rs  build.rs  config.rs  runner.rs  shared.rs  versions.rs
cbsd-rs/cbsbuild/src/cmds/config/: init.rs  init_vault.rs  prompts.rs
cbsd-rs/cbsbuild/tests/: m1_smoke.rs
cbsd-rs/cbscore/: Cargo.toml
cbsd-rs/cbscore-types/: Cargo.toml
cbsd-rs/cbscore-types/src/: builder.rs  config.rs  containers.rs  core.rs  errors.rs  images.rs  lib.rs  logger.rs  releases.rs  runner.rs  utils.rs  versioned.rs  versions.rs
cbsd-rs/cbscore-types/src/builder/: errors.rs  report.rs  versioned.rs
cbsd-rs/cbscore-types/src/config/: errors.rs  paths.rs  storage.rs  vault.rs  versioned.rs
cbsd-rs/cbscore-types/src/containers/: desc.rs  errors.rs  versioned.rs
cbsd-rs/cbscore-types/src/core/: component.rs
cbsd-rs/cbscore-types/src/core/component/: errors.rs  versioned.rs
cbsd-rs/cbscore-types/src/images/: desc.rs  errors.rs  versioned.rs
cbsd-rs/cbscore-types/src/releases/: desc.rs  errors.rs  versioned.rs
cbsd-rs/cbscore-types/src/runner/: errors.rs
cbsd-rs/cbscore-types/src/utils/: buildah.rs  podman.rs  secrets.rs  subprocess.rs
cbsd-rs/cbscore-types/src/utils/buildah/: errors.rs
cbsd-rs/cbscore-types/src/utils/podman/: errors.rs
cbsd-rs/cbscore-types/src/utils/secrets/: errors.rs  versioned.rs
cbsd-rs/cbscore-types/src/utils/subprocess/: errors.rs
cbsd-rs/cbscore-types/src/versions/: desc.rs  errors.rs  utils.rs  versioned.rs
cbsd-rs/cbscore-types/tests/: round_trip.rs
cbsd-rs/cbscore-types/tests/fixtures/build_artifact_report/: minimal.json
cbsd-rs/cbscore-types/tests/fixtures/config/: minimal.yaml
cbsd-rs/cbscore-types/tests/fixtures/container_descriptor/: minimal.json
cbsd-rs/cbscore-types/tests/fixtures/core_component/: minimal.yaml
cbsd-rs/cbscore-types/tests/fixtures/image_descriptor/: minimal.json
cbsd-rs/cbscore-types/tests/fixtures/release_component/: minimal.json
cbsd-rs/cbscore-types/tests/fixtures/release_desc/: minimal.json
cbsd-rs/cbscore-types/tests/fixtures/secrets/: four_families.yaml
cbsd-rs/cbscore-types/tests/fixtures/vault/: minimal.yaml
cbsd-rs/cbscore-types/tests/fixtures/version_descriptor/: minimal.json
cbsd-rs/cbscore/src/: builder.rs  config.rs  containers.rs  core.rs  images.rs  lib.rs  releases.rs  runner.rs  secrets.rs  utils.rs  versions.rs
cbsd-rs/cbscore/src/builder/: prepare.rs  report.rs  rpmbuild.rs  signing.rs  upload.rs  utils.rs
cbsd-rs/cbscore/src/builder/signing/: gpg.rs
cbsd-rs/cbscore/src/containers/: build.rs  component.rs  repos.rs
cbsd-rs/cbscore/src/core/: component.rs
cbsd-rs/cbscore/src/images/: signing.rs  skopeo.rs  sync.rs
cbsd-rs/cbscore/src/releases/: s3.rs  utils.rs
cbsd-rs/cbscore/src/runner/: run.rs
cbsd-rs/cbscore/src/secrets/: git.rs  mgr.rs  models.rs  registry.rs  signing.rs  storage.rs  utils.rs
cbsd-rs/cbscore/src/utils/: buildah.rs  git.rs  podman.rs  s3.rs  subprocess.rs  vault.rs
cbsd-rs/cbscore/src/utils/git/: errors.rs
cbsd-rs/cbscore/src/utils/s3/: errors.rs
cbsd-rs/cbscore/src/utils/vault/: errors.rs
cbsd-rs/cbscore/src/versions/: create.rs  desc.rs  resolve.rs  utils.rs
cbsd-rs/cbsd-proto/: Cargo.toml
cbsd-rs/cbsd-proto/src/: lib.rs  ws.rs
cbsd-rs/cbsd-server/: Cargo.toml
cbsd-rs/cbsd-worker/: Cargo.toml
cbsd-rs/docs/: 000-20264026T1104-security-review.md  CLAUDE.md  (+3 more)
container/: ContainerFile.cbsd-rs  build-cbsd-rs.sh  build.sh  release.sh
crt/: pyproject.toml
shell/: pyproject.toml
(+468 files in other folders)
