# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026  Clyso

[package]
name = "cbsbuild"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "cbsbuild CLI — cbscore-rs Rust port of the cbsbuild entry point"

[dependencies]
cbscore-types = { path = "../cbscore-types" }
cbscore = { path = "../cbscore" }

clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
camino = "1"
serde_json.workspace = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
mod_module_files = "warn"
