# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026  Clyso

[package]
name = "cbscore-types"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
description = "Shared zero-IO types for cbscore-rs (descriptors, config, errors)"

[dependencies]
camino = { version = "1", features = ["serde1"] }
chrono.workspace = true
serde.workspace = true
serde-value = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json.workspace = true
serde-saphyr = "0.0.24"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
mod_module_files = "warn"
