[package]
name = "cbsd-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for the CBS daemon (cbsd-rs)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
utoipa = { version = "5", features = ["chrono"] }

[dev-dependencies]
# Test-only: `EnumIter` on the SI-18 `ServerMessageTag` witness enum (D13-T6).
# Not a production dependency.
strum = { version = "0.27", features = ["derive"] }
